index adding comments

--- a/3.html
+++ b/3.html
@@ -21,5 +21,7 @@
  몸이 유연하지 않지만, 뛰어난 박자 감각과 그루브를 가지고 있어요.<br>
  <p>최근에 한 <a href=https://youtu.be/nFa9UnCaFcY target="_blank" title="춤꾼의면모">Permission to dance 챌린지</a>에서도
  같이 참여한 두 친구에 비해 월등한 실력이 있었어요.</p>
+ <p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nFa9UnCaFcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></P>
 
 </body>
