--- a/1.html
+++ b/1.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PZJ748GV3B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PZJ748GV3B');
+</script>
 <title>Yoonjoo's World</title>
 <meta charset="utf-8">
 </head>
