--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <meta charset="utf-8">
 
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PZJ748GV3B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PZJ748GV3B');
+</script>
 
 <body>
   <h1><a href="index.html">정윤주는 누구인가?</a></h1>
