--- a/3.html
+++ b/3.html
@@ -12,17 +12,74 @@
 </script>
 <title>Yoonjoo's World</title>
 <meta charset="utf-8">
+<style>
+body{
+  margin:0;
+}
+a {
+  color:black;
+  text-decoration:none;
+}
+#active{
+  color:red;
+}
+.saw{
+  color:black;
+}
+
+h1{
+  font-size:60px;
+  text-align: center;
+  border-bottom:1px solid black;
+  margin:0;
+padding:20px;
+}
+ol{
+  border-right:1px solid black;
+  width:150px;
+  margin:0;
+  padding:20px;
+}
+#grid{
+  border:1px ;
+  display:grid;
+  grid-template-columns: 200px 1fr;
+  /*fr은 자동크기조절 */
+}
+#article{
+  padding:5px;
+  margin:0;
+}
+div{
+  border:1px;
+}
+@media(max-width:612px){
+  #grid{
+    border:1px ;
+    display:block;
+    /*fr은 자동크기조절 */
+  }
+  ol{
+    border-right:none;
+}
+h1{
+  border-bottom:none;
+  font-size:30px;
+}
+</style>
+
 </head>
+
 
 <body>
   <h1><a href="index.html">정윤주는 누구인가?</a></h1>
-
+<div id="grid">
 <ol>
-  <li><a href="1.html"> 자기소개 </a></li>
-  <li><a href="2.html"> 좋아하는 취미 </a></li>
-  <li><a href="3.html"> 잘하는 것 </a></li>
+  <li><a href="1.html" class="saw"> 자기소개 </a></li>
+  <li><a href="2.html" class="saw" >좋아하는 취미 </a></li>
+  <li><a href="3.html"id="active"> 잘하는 것 </a></li>
 </ol>
-
+<div id="article">
 <h2>춤 신<br>
     춤 왕</h2>
 
@@ -32,5 +89,6 @@
  같이 참여한 두 친구에 비해 월등한 실력이 있었어요.</p>
  <p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nFa9UnCaFcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></P>
-
+</div>
+</div>
 </body>
