--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@ a {
   color:black;
   text-decoration:none;
 }
-#active{
-  color:red;
-}
-.saw{
-  color:black;
-}
 
 h1{
   font-size:60px;
@@ -74,8 +68,8 @@ h1{
   <h1><a href="index.html">정윤주는 누구인가?</a></h1>
 <div id="grid">
 <ol>
-  <li><a href="1.html" class="saw"> 자기소개 </a></li>
-  <li><a href="2.html" class="saw" id="active">좋아하는 취미 </a></li>
+  <li><a href="1.html"> 자기소개 </a></li>
+  <li><a href="2.html">좋아하는 취미 </a></li>
   <li><a href="3.html"> 잘하는 것 </a></li>
 </ol>
 <div>
